# nwsmedia_engine

./: .dockerignore  .env.example  .env.production  .gitattributes  .gitignore  CHECKLIST.md  COLD_CALL_SCRIPT.md  CRAIGSLIST_SCRAPER_PLAN.md  DELIVERABILITY_FIXES.md  DISCOVERY_CALL_SCRIPT.md  INSTANTLY_CAMPAIGNS.md  INSTANTLY_SETUP.md  LEAD_ENGINE_CRM_INTEGRATION.md  LEAD_ENGINE_PLAN.md  LOCAL_SETUP.md  NWS_CRM_Development_Checklist.html  NWS_CRM_Features_By_Role.md  NWS_CRM_Remaining_Development.md  NWS_CRM_Technical_Documentation.md  PRICING_AND_MOAT_RESEARCH.md  PRICING_AND_MOAT_SPREADSHEET.csv  README.md  STRATEGY_ANALYSIS.md  SUBSCRIPTION_COSTS.md  VPS_DEPLOY.md  _d.py  _deploy_simulator.py  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  package-lock.json  pyproject.toml  run.py
alembic/: env.py
backend/: .env.example  Dockerfile  jest.config.ts  package-lock.json  package.json  tsconfig.json
dashboard/: next.config.ts  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
nginx/: Dockerfile  nginx.conf
reports/: example_audit_no_website.html  example_audit_report.html
scripts/: count_leads.py  export_leads_csv.py  setup-hetzner.sh  test_instantly_emails.py
shared/: package.json  tsconfig.json
src/: celery_app.py  cli.py  config.py  database.py
templates/: INSTANTLY_README.txt  NWS_MEDIA_CRAIGSLIST_followup_1.txt  NWS_MEDIA_CRAIGSLIST_followup_2.txt  NWS_MEDIA_CRAIGSLIST_followup_3.txt  (+17 more)
(+312 files in other folders)
